Starting to bring together FISTA and adj wavelet

--- a/notes/adjoint_wavelet.bib
+++ b/notes/adjoint_wavelet.bib
@@ -29,6 +29,13 @@
    journal="SIAM Journal on Imaging Sciences",
 }
 
+@article{becker_2011,
+   title="{\sc NESTA}: A fast and accurate first-order method for sparse recovery",
+   author="Stephen Becker and J\'er\^ome Bobin and Emmanuel J. Cand\`es",
+   year=2011,
+   journal="SIAM Journal on Imagine Sciences",
+}
+
 @article{combettes_2007,
    title="A {D}ouglas-{R}achford Splitting Approach to Nonsmooth Convex Variational Signal Recovery",
    author="Patrick L Combettes and Jean-Christophe Pesquet",
