--- a/notes/adjoint_wavelet_notes.tex
+++ b/notes/adjoint_wavelet_notes.tex
@@ -324,13 +324,14 @@ x(:, end-le+1:end) = x(:, end-le+1:end) + xe(:, end:-1:end-le+1);
 % ]]]
 
 
-%\cite{mallat_2009}
-%\cite{strang_1996}
-%\cite{beck_2009}
-%\cite{hansen_2006}
+\cite{mallat_2009}
+\cite{strang_1996}
+\cite{beck_2009}
+\cite{hansen_2006}
+\cite{becker_2011}
 
 \clearpage
-\bibliographystyle{siam}
+\bibliographystyle{IEEEtran}
 \bibliography{adjoint_wavelet.bib}
 
 \end{document}
